--- a/README
+++ b/README
@@ -360,6 +360,18 @@ logins, add the following to the top of /etc/pam.d/login:
    auth sufficient pam_yubico.so id=16 debug
 ------
 
+OpenVPN and ActiveDirectory
+
+/etc/pam.d/openvpn
+auth  required  pam_yubico.so ldap_uri=ldap://ldap-srv debug id=19 yubi_attr=pager 
+   ldapdn=dc=ad,dc=next-audience,dc=net 
+   ldap_filter=(&(sAMAccountName=%u)(memberOf=CN=mygroup,OU=DefaultUser,DC=adivser,DC=net)) 
+   ldap_bind_no_anonymous ldap_bind_user_filter=%u@adviser.com try_first_pass
+account required  pam_yubico.so
+
+openvpn.conf
+plugin openvpn-plugin-auth-pam.so openvpn
+
 
 Feedback
 --------
